# musical-gym-data-model

./: Cargo.toml  measurements.csv
src/: main.rs  model.rs
