[package]
name = "data-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.34", features = ["std", "serde","rustc-serialize"] }
csv = "1.3.0"
imu-fusion = "0.2.1"
serde = {version = "1.0.197", features = ["derive"]}
